--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -80,7 +80,9 @@
 							}
 						}
 						if (!author_name.replace(/\s/g, '')) {
-							
+							for (let i = 0; i < instance_users.length; i++) {
+								
+							}
 						}
 						if (fields['author_id'] == '{{ user.id }}') {
 							$("#showdata tbody").prepend(
