--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -81,6 +81,8 @@
 						}
 						if (!author_name.replace(/\s/g, '')) {
 							for (let i = 0; i < instance_users.length; i++) {
+								var fields_user = instance_users[i];
+								if (fields_user == fields['author_id']);
 								
 							}
 						}
