--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -137,7 +137,7 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
-					{{ form.as_p }}
+					{{ form.as_table }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Submit</button>
