--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -35,6 +35,8 @@
 						<label>Image:</label><br>
 						{{ p_form.image }}<br><br>
 						<legend class="border-bottom mb-4">Settings:</legend>
+						<label>Initial text and HTML tags (chat):</label><br>
+						{{ p_form.initial_chat }}<br><br>
 						<label>List rows(1-100):</label><br>
 						{{ p_form.list_rows }}<br><br>
 						<label>Items in page(1-50):</label><br>
