--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -143,6 +143,7 @@
 				<button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Submit</button>
 				<a class="btn btn-primary btn-sm mt-1 mb-1" href="javascript:history.go(-1)">Back</a>
 				<a class="btn btn-primary btn-sm mt-1 mb-1" onclick="jsonChat(1)">Reload</a>
+				<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'chat-new' %}">HTML Editor</a>
 			</div>
 		</form>
 		<br>
