--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -99,6 +99,7 @@
 										<a class="mr-2" href="../${fields['id']||""}/user_info/">
 										${author_name||""}</a>
 										<a class="mr-2" href="../${fields['id']||""}/update/">Update</a>
+										<a class="mr-2" href="../${fields['id']||""}/comment/">Comment</a>
 									</div>
 									<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
 										<img src="../..{{MEDIA_URL}}${author_image||""}" class="img-circle 
@@ -116,6 +117,7 @@
 										${dateTime||""}
 										<a class="mr-2" href="../${fields['id']||""}/user_info/">
 										${author_name||""}</a>
+										<a class="mr-2" href="../${fields['id']||""}/comment/">Comment</a>
 									</div>
 									<div class="col-sm-12" style="background-color:rgb(230, 230, 250);">
 										<img src="../..{{MEDIA_URL}}${author_image||""}" class="img-circle 
