--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -9,7 +9,7 @@
 	<div class="jumbotron">
 		<script>
 			var chatDispTimer;
-			var thread_Id; // test
+			var thread_Id = 0; // test
 			setTimeout(jsonChat, 500, 1);
 			function jsonChat(selected_page) {
 			if (selected_page == 1) {
