--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -10,6 +10,9 @@
 		<script>
 			var chatDispTimer;
 			var thread_Id = 0; // test
+			function toThread() { // test
+				thread_Id = 10;
+			}
 			setTimeout(jsonChat, 500, 1);
 			function jsonChat(selected_page) {
 			if (selected_page == 1) {
