--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -10,8 +10,9 @@
 		<script>
 			var chatDispTimer;
 			var thread_Id = 0; // test
-			function toThread(msg_ID) { // test
-				thread_Id = msg_ID;
+			function toThread(msg_tmp_ID) { // test
+				//alert(msg_tmp_ID); //debug
+				thread_Id = msg_tmp_ID;
 				jsonChat(1);
 			}
 			setTimeout(jsonChat, 500, 1);
@@ -95,7 +96,14 @@
 								}
 							}
 						}
+						let msg_tmp_ID = 0;
+						if (fields['origin_post_id'] == 0) {
+							msg_tmp_ID = fields['id'];
+						} else {
+							msg_tmp_ID = fields['origin_post_id'];
+						}
 						if (fields['author_id'] == '{{ user.id }}') {
+
 							$("#showdata tbody").prepend(
 									`
 									<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
@@ -105,7 +113,8 @@
 										${author_name||""}</a>
 										<a class="mr-2" href="../${fields['id']||""}/update/">Update</a>
 										<a class="mr-2" href="../${fields['id']||""}/comment/">Comment</a>
-										<a class="mr-2" href="toThread" onclick="toThread(${fields['id']||""}); return false;">Thread</a>
+										<a class="mr-2" href="toThread" onclick="toThread(${msg_tmp_ID||""});
+										 return false;">Thread</a>
 									</div>
 									<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
 										<img src="../..{{MEDIA_URL}}${author_image||""}" class="img-circle 
